[gd_scene load_steps=2 format=3 uid="uid://d24ilp0yvu71g"]

[ext_resource type="Script" path="res://greeting_label.gd" id="1_greet"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Content" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.8

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Content"]
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="HBoxContainer/Content/VBoxContainer"]
layout_mode = 2

[node name="ResponseGrid" type="GridContainer" parent="HBoxContainer/Content/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="RustGreeter" type="RustGreeter" parent="HBoxContainer/Content/VBoxContainer"]

[node name="PasswordInput" type="LineEdit" parent="HBoxContainer/Content/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
placeholder_text = "Enter your OpenAI API key"
secret = true

[node name="AnthropicInput" type="LineEdit" parent="HBoxContainer/Content/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
placeholder_text = "Enter your Anthropic API key"
secret = true

[node name="MessageInput" type="LineEdit" parent="HBoxContainer/Content/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
placeholder_text = "Your message"

[node name="GetRandomTextButton" type="Button" parent="HBoxContainer/Content/VBoxContainer"]
layout_mode = 2
text = "Get response from openai & anthropic"

[node name="GreetingLabel" type="Label" parent="HBoxContainer/Content/VBoxContainer"]
layout_mode = 2
script = ExtResource("1_greet")

[connection signal="pressed" from="HBoxContainer/Content/VBoxContainer/GetRandomTextButton" to="HBoxContainer/Content/VBoxContainer/GreetingLabel" method="_on_GetRandomTextButton_pressed"]
